// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitButton should render correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "red",
          "height": 39.19,
          "justifyContent": "center",
          "marginVertical": 23.5,
          "width": 312,
        },
        Object {
          "opacity": 1,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "process": [Function],
        }
      }
      style={
        Object {
          "borderRadius": 19,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "position": "absolute",
        }
      }
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#fff",
            "flex": 1,
            "fontWeight": "bold",
            "justifyContent": "center",
          }
        }
      >
        LOGIN
      </Text>
    </View>
  </View>
</View>
`;

exports[`SubmitButton should render disabled button correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "red",
          "height": 39.19,
          "justifyContent": "center",
          "marginVertical": 23.5,
          "width": 312,
        },
        Object {
          "opacity": 0.5,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "process": [Function],
        }
      }
      style={
        Object {
          "borderRadius": 19,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "position": "absolute",
        }
      }
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#fff",
            "flex": 1,
            "fontWeight": "bold",
            "justifyContent": "center",
          }
        }
      >
        LOGIN
      </Text>
    </View>
  </View>
</View>
`;
